--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "vercel": "^32.1.0",
     "webpack": "^5.88.2"
   }
 }
