--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.3",
+    "aws-amplify": "^5.3.10",
     "dotenv": "^16.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "express": "^4.18.2",
+    "graphql": "^16.8.0",
+    "graphql-tag": "^2.12.6",
     "mongodb": "^5.8.1",
     "mongoose": "^7.5.0",
     "next": "13.4.16",
     "nodemon": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "realm-web": "^2.0.0",
     "vercel": "^32.1.0",
     "webpack": "^5.88.2"
   }
