--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.8.3",
     "aws-amplify": "^5.3.10",
     "dotenv": "^16.3.1",
+    "encoding": "^0.1.13",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "express": "^4.18.2",
